samples/bookmap/valid/R21.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
  <appendices>
    <topicmeta><navtitle>Appendices Group</navtitle></topicmeta>
    <appendix href="a1.dita"><topicmeta><navtitle>App 1</navtitle></topicmeta></appendix>
    <appendix href="a2.dita"><topicmeta><navtitle>App 2</navtitle></topicmeta></appendix>
  </appendices>
</bookmap>