samples/bookmap/invalid/R23.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
  <backmatter>
    <p>This is supposed to be the Document Revision History.</p> {/* Not a topicref */}
  </backmatter>
</bookmap>